# EmotionRecognition

./: .gitignore  MANIFEST.in  pyproject.toml  requirements.txt  setup.cfg
src/EmotionRecognition/: __init__.py  __main__.py  confusion_matrix.py  test.py
