[metadata]
name = EmotionRecognition
version = 0.0.1
author = shalabycr7
author_email = abdoshalaby.dev@gmail.com
description = application or automation that will scrape data (ICD-10 codes) and automatically paste 12 at a time into a windows application
long_description = file: README.md, CHANGELOG.md, LICENSE
classifiers =
    Framework :: Tkinter
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
include =
    EmotionRecognition
    EmotionRecognition.icons
    EmotionRecognition.model